@@ -159,23 +159,24 @@ void sunder(char *str)
 
 /* These functions (ngetline() and ngetdelim(), originally getline() and
  * getdelim()) were adapted from GNU mailutils 0.5 (mailbox/getline.c).
- * Here is the notice from that file:
+ * Here is the notice from that file, after converting to the GPL via
+ * LGPL clause 3:
  *
  * GNU Mailutils -- a suite of utilities for electronic mail
  * Copyright (C) 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
  *
  * This library is free software; you can redistribute it and/or
- * modify it under the terms of the GNU Lesser General Public
- * License as published by the Free Software Foundation; either
- * version 2 of the License, or (at your option) any later version.
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of the
+ * License, or (at your option) any later version.
  *
  * This library is distributed in the hope that it will be useful,
  * but WITHOUT ANY WARRANTY; without even the implied warranty of
  * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * Lesser General Public License for more details.
+ * General Public License for more details.
  *
- * You should have received a copy of the GNU Lesser General Public
- * License along with this library; if not, write to the Free Software
+ * You should have received a copy of the GNU General Public License
+ * along with this library; if not, write to the Free Software
  * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307  USA  */
 
 #if !defined(NANO_SMALL) && defined(ENABLE_NANORC)
