@@ -94,7 +94,9 @@ CVS code -
 	  which was apparently in 1999. (DLR)
 	- For functions originally adapted from other sources, add
 	  notices from the original files, as we do with the tab
-	  completion functions adapted from busybox. (DLR)
+	  completion functions adapted from busybox.  Also, invoke LGPL
+	  clause 3 to convert all LGPLed functions to GPLed ones, so
+	  that we don't have to include a copy of the LGPL. (DLR)
 - chars.c:
   mbwidth()
 	- If wcwidth() returns -1 for the character passed in, treat the
